# nodelet_example

./: CMakeLists.txt  README.md  package.xml
include/nodelet_example/: example_header.h
launch/: nodelet_launch.launch
plugins/nodelet/: subpubnodeletclass.xml
src/: example_header.cpp  name_publisher.cpp
